--- a/laflare.html
+++ b/laflare.html
@@ -1,75 +1,244 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Laflare - features</title>
-  <link rel="stylesheet" href="https://stackedit.io/style.css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Laflare - features</title>
 </head>
 
-<body class="stackedit">
-  <div class="stackedit__html"><h2 id="rage">Rage</h2>
-<p><strong>Conditions if lethal (only SSG-08)</strong> - helps killing lethal players.<br>
-Autocalculate damage <em>- uses cheat’s APIs to calculate possible damage from your weapon</em><br>
-Extrapolate local player <em>- helps correctly autocalculating damage by utilizing your velocity and position</em><br>
-Minimum health (if Autocalculate damage turned off) <em>- applies conditions if target’s health is lower than this value</em><br>
-Values: <em>Body aim, Safe points, Ensure safety (on hitboxes)</em></p>
-<p><strong>Adaptive autopeek</strong> - makes autopeek more comfortable<br>
-Apply only with SSG-08 <em>- useful if you use mindamage for idealticking, so you will not ruin your AWP experience</em><br>
-Values: <em>Minimum damage, Hitchance, Body aim, Safe points, Ensure safety (on hitboxes), Freestanding</em></p>
-<p><strong>Adaptive hitchance</strong><br>
-Weapons: <em>Autosnipers, AWP, SSG-08</em><br>
-Conditions: <em>In air, Unscoped, Slowwalking</em><br>
-Values: <em>Hitchance</em></p>
-<p><strong>Fast zeus</strong> - instantly switches to your primary weapon after firing from zeus<br>
-<strong>Jumpscout improvement</strong> - disables autostrafer when you have low speed, so you can hit jumpshots</p>
-<h2 id="antiaim">Antiaim</h2>
-<p><strong>Activate defensive while in air</strong> - magically makes everyone miss, also named as “Break LC in air”<br>
-<strong>Manual direction</strong>: <em>Disabled, Left, Right</em> - rotates your player.</p>
-<p><strong>Antiaim builder</strong> - helps you making perfect antiaims.<br>
-Conditions: <em>Global, Air+duck, Air, Slowwalk, Duck, Running, Standing</em><br>
-Yaw:  <em>Disabled, Backward, Static</em><br>
-Yaw base: <em>Local view, At targets</em><br>
-Yaw offset: <em>value from -180 to 180</em></p>
-<p>Yaw modifier: <em>Disabled, Center, Offset, Random, Spin</em><br>
-Yaw modifier offset: <em>value from -180 to 180</em></p>
-<p>Body yaw:<br>
-Left/Right limits: <em>value from 0 to 60</em><br>
-Options: <em>Avoid overlap, Jitter, Randomize jitter, Anti bruteforce</em><br>
-Desync freestanding: <em>Off, Peek fake, Peek real</em><br>
-On shot: <em>Default, Opposite, Freestanding, Switch</em><br>
-LBY mode: <em>Disabled, Opposite, Sway</em></p>
-<p>Extended angles:<br>
-Extended pitch: <em>value  from -180 to 180</em><br>
-Extended yaw: <em>value from 0 to 90</em></p>
-<p>Jitter legs <em>- constantly switches “Leg movement” values</em><br>
-Export <em>- copies your antiaim builder settings to clipboard, so you can share them with friends</em><br>
-Import <em>- pastes antiaim builder settings from clipboard</em></p>
-<h2 id="miscellaneous">Miscellaneous</h2>
-<p><strong>Aspect ratio</strong> - stretches your screen<br>
-<strong>Viewmodel</strong> - changes your hands’ position<br>
-<strong>Flash icon on round start</strong> - highlights csgo’s taskbar icon with orange color on the round start<br>
-<strong>Laflare clantag</strong> - animates your clantag so you can flex with our lua<br>
-<strong>Trashtalk</strong> - says something that Morgenshtern would say after kill. как дела как дела это новый кадиллак<br>
-<strong>Aimbot logs</strong> - logs your misses and hits to console and upper left corner<br>
-<strong>Change VGUI color</strong> - changes console and server browser color</p>
-<h2 id="visuals">Visuals</h2>
-<p><strong>Lightning zeus flag</strong> - shows sexy zeus flag instead of not sexy one<br>
-<img src="https://i.imgur.com/tssdrN9.png" alt=""><br>
-<strong>Missmarker</strong> - like hitmarker, but for misses<br>
-<img src="https://i.imgur.com/tR8LLyU.png" alt=""><br>
-<strong>Custom scope</strong> - replaces black scope lines with customizable gradient lines<br>
-<img src="https://i.imgur.com/jrmM9hU.png" alt=""><br>
-<strong>State panel</strong> - shows info about desync, hit/miss ratio and current player state<br>
-<img src="https://i.imgur.com/kawjg5q.png" alt=""><br>
-<strong>Indicators</strong> - shows desync lenght, invertor side and important binds under crosshair<br>
-<img src="https://i.imgur.com/QJv3ncv.png" alt=""><br>
-<strong>Ryuko on menu</strong> - shows the best girl on planet earth right above your menu :3<br>
-<img src="https://i.imgur.com/TkM5QIf.png" alt=""><br>
-<strong>Become MORGENSHTERN</strong> - doesn’t need explanation<br>
-<img src="https://i.imgur.com/YShYZW2.jpg" alt="enter image description here"></p>
-</div>
+<style>
+    body {
+        margin: 0;
+        counter-reset: a b
+    }
+
+    /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
+    html {
+        line-height: 1.15;
+        -ms-text-size-adjust: 100%;
+        -webkit-text-size-adjust: 100%;
+        background-color: #222;
+    }
+
+    h1 {
+        font-size: 2em;
+        margin: .67em 0
+    }
+
+    hr {
+        box-sizing: content-box;
+        height: 0;
+        overflow: visible
+    }
+
+    main {
+        display: block
+    }
+
+    pre {
+        font-family: monospace, monospace;
+        font-size: 1em
+    }
+
+    a {
+        background-color: transparent;
+        -webkit-text-decoration-skip: objects
+    }
+
+    abbr[title] {
+        border-bottom: none;
+        text-decoration: underline;
+        text-decoration: underline dotted
+    }
+
+    b,
+    strong {
+        font-weight: 700;
+        color: #eee;
+    }
+
+    code,
+    kbd,
+    samp {
+        font-family: monospace, monospace;
+        font-size: 1em
+    }
+
+    dfn {
+        font-style: italic
+    }
+
+    mark {
+        background-color: #ff0;
+        color: #000
+    }
+
+    small {
+        font-size: 80%
+    }
+
+    sub,
+    sup {
+        font-size: 75%;
+        line-height: 0;
+        position: relative;
+        vertical-align: baseline
+    }
+
+    sub {
+        bottom: -.25em
+    }
+
+    sup {
+        top: -.5em
+    }
+
+    img {
+        border-style: none
+    }
+
+    body,
+    html {
+        color: #aaa;
+        font-size: 16px;
+        font-family: Lato, Helvetica Neue, Helvetica, sans-serif;
+        font-variant-ligatures: common-ligatures;
+        line-height: 1.67;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale
+    }
+
+    blockquote,
+    dl,
+    ol,
+    p,
+    pre,
+    ul {
+        margin: 1.2em 0
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        margin: 1.8em 0;
+        line-height: 1.33
+    }
+
+    h1:after,
+    h2:after {
+        content: "";
+        display: block;
+        position: relative;
+        top: .33em;
+        border-bottom: 1px solid hsla(0, 0%, 50%, .33)
+    }
+
+    hr {
+        border: 0;
+        border-top: 1px solid hsla(0, 0%, 50%, .33);
+        margin: 2em 0
+    }
+
+    mark {
+        background-color: #f8f840
+    }
+
+    abbr[title] {
+        border-bottom: 1px dotted #777;
+        cursor: help
+    }
+
+    img {
+        max-width: 70%
+    }
+
+    .markdown {
+        margin-bottom: 180px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 30px;
+        padding-right: 30px;
+        max-width: 800px
+    }
+</style>
+
+<body>
+    <div class="markdown">
+        <h2 id="rage">Rage</h2>
+        <p><strong>Conditions if lethal (only SSG-08)</strong> - helps killing lethal players.<br>
+            Autocalculate damage <em>- uses cheat’s APIs to calculate possible damage from your weapon</em><br>
+            Extrapolate local player <em>- helps correctly autocalculating damage by utilizing your velocity and
+                position</em><br>
+            Minimum health (if Autocalculate damage turned off) <em>- applies conditions if target’s health is lower than this
+                value</em><br>
+            Values: <em>Body aim, Safe points, Ensure safety (on hitboxes)</em></p>
+        <p><strong>Adaptive autopeek</strong> - makes autopeek more comfortable<br>
+            Apply only with SSG-08 <em>- useful if you use mindamage for idealticking, so you will not ruin your AWP
+                experience</em><br>
+            Values: <em>Minimum damage, Hitchance, Body aim, Safe points, Ensure safety (on hitboxes), Freestanding</em></p>
+        <p><strong>Adaptive hitchance</strong><br>
+            Weapons: <em>Autosnipers, AWP, SSG-08</em><br>
+            Conditions: <em>In air, Unscoped, Slowwalking</em><br>
+            Values: <em>Hitchance</em></p>
+        <p><strong>Fast zeus</strong> - instantly switches to your primary weapon after firing from zeus<br>
+            <strong>Jumpscout improvement</strong> - disables autostrafer when you have low speed, so you can hit jumpshots
+        </p>
+        <h2 id="antiaim">Antiaim</h2>
+        <p><strong>Activate defensive while in air</strong> - magically makes everyone miss, also named as “Break LC in
+            air”<br>
+            <strong>Manual direction</strong>: <em>Disabled, Left, Right</em> - rotates your player.
+        </p>
+        <p><strong>Antiaim builder</strong> - helps you making perfect antiaims.<br>
+            Conditions: <em>Global, Air+duck, Air, Slowwalk, Duck, Running, Standing</em><br>
+            Yaw: <em>Disabled, Backward, Static</em><br>
+            Yaw base: <em>Local view, At targets</em><br>
+            Yaw offset: <em>value from -180 to 180</em></p>
+        <p>Yaw modifier: <em>Disabled, Center, Offset, Random, Spin</em><br>
+            Yaw modifier offset: <em>value from -180 to 180</em></p>
+        <p>Body yaw:<br>
+            Left/Right limits: <em>value from 0 to 60</em><br>
+            Options: <em>Avoid overlap, Jitter, Randomize jitter, Anti bruteforce</em><br>
+            Desync freestanding: <em>Off, Peek fake, Peek real</em><br>
+            On shot: <em>Default, Opposite, Freestanding, Switch</em><br>
+            LBY mode: <em>Disabled, Opposite, Sway</em></p>
+        <p>Extended angles:<br>
+            Extended pitch: <em>value from -180 to 180</em><br>
+            Extended yaw: <em>value from 0 to 90</em></p>
+        <p>Jitter legs <em>- constantly switches “Leg movement” values</em><br>
+            Export <em>- copies your antiaim builder settings to clipboard, so you can share them with friends</em><br>
+            Import <em>- pastes antiaim builder settings from clipboard</em></p>
+        <h2 id="miscellaneous">Miscellaneous</h2>
+        <p><strong>Aspect ratio</strong> - stretches your screen<br>
+            <strong>Viewmodel</strong> - changes your hands’ position<br>
+            <strong>Flash icon on round start</strong> - highlights csgo’s taskbar icon with orange color on the round
+            start<br>
+            <strong>Laflare clantag</strong> - animates your clantag so you can flex with our lua<br>
+            <strong>Trashtalk</strong> - says something that Morgenshtern would say after kill. как дела как дела это новый
+            кадиллак<br>
+            <strong>Aimbot logs</strong> - logs your misses and hits to console and upper left corner<br>
+            <strong>Change VGUI color</strong> - changes console and server browser color
+        </p>
+        <h2 id="visuals">Visuals</h2>
+        <p><strong>Lightning zeus flag</strong> - shows sexy zeus flag instead of not sexy one<br>
+            <img src="./Laflare - features_files/tssdrN9.png" alt=""><br>
+            <strong>Missmarker</strong> - like hitmarker, but for misses<br>
+            <img src="./Laflare - features_files/tR8LLyU.png" alt=""><br>
+            <strong>Custom scope</strong> - replaces black scope lines with customizable gradient lines<br>
+            <img src="./Laflare - features_files/jrmM9hU.png" alt=""><br>
+            <strong>State panel</strong> - shows info about desync, hit/miss ratio and current player state<br>
+            <img src="./Laflare - features_files/kawjg5q.png" alt=""><br>
+            <strong>Indicators</strong> - shows desync lenght, invertor side and important binds under crosshair<br>
+            <img src="./Laflare - features_files/QJv3ncv.png" alt=""><br>
+            <strong>Ryuko on menu</strong> - shows the best girl on planet earth right above your menu :3<br>
+            <img src="./Laflare - features_files/TkM5QIf.png" alt=""><br>
+            <strong>Become MORGENSHTERN</strong> - doesn’t need explanation<br>
+            <img src="./Laflare - features_files/YShYZW2.jpg" alt="enter image description here">
+        </p>
+    </div>
 </body>
 
 </html>
