--- a/laflare.html
+++ b/laflare.html
@@ -224,19 +224,19 @@
         </p>
         <h2 id="visuals">Visuals</h2>
         <p><strong>Lightning zeus flag</strong> - shows sexy zeus flag instead of not sexy one<br>
-            <img src="./Laflare - features_files/tssdrN9.png" alt=""><br>
+            <img src="tssdrN9.png"><br>
             <strong>Missmarker</strong> - like hitmarker, but for misses<br>
-            <img src="./Laflare - features_files/tR8LLyU.png" alt=""><br>
+            <img src="tR8LLyU.png"><br>
             <strong>Custom scope</strong> - replaces black scope lines with customizable gradient lines<br>
-            <img src="./Laflare - features_files/jrmM9hU.png" alt=""><br>
+            <img src="jrmM9hU.png"><br>
             <strong>State panel</strong> - shows info about desync, hit/miss ratio and current player state<br>
-            <img src="./Laflare - features_files/kawjg5q.png" alt=""><br>
+            <img src="kawjg5q.png"><br>
             <strong>Indicators</strong> - shows desync lenght, invertor side and important binds under crosshair<br>
-            <img src="./Laflare - features_files/QJv3ncv.png" alt=""><br>
+            <img src="QJv3ncv.png"><br>
             <strong>Ryuko on menu</strong> - shows the best girl on planet earth right above your menu :3<br>
-            <img src="./Laflare - features_files/TkM5QIf.png" alt=""><br>
+            <img src="TkM5QIf.png"><br>
             <strong>Become MORGENSHTERN</strong> - doesn’t need explanation<br>
-            <img src="./Laflare - features_files/YShYZW2.jpg" alt="enter image description here">
+            <img src="YShYZW2.jpg">
         </p>
     </div>
 </body>
