--- a/laflare.html
+++ b/laflare.html
@@ -153,7 +153,7 @@
     }
 
     img {
-        max-width: 70%
+        max-width: 100%
     }
 
     .markdown {
@@ -223,18 +223,14 @@
             <strong>Change VGUI color</strong> - changes console and server browser color
         </p>
         <h2 id="visuals">Visuals</h2>
-        <p><strong>Lightning zeus flag</strong> - shows sexy zeus flag instead of not sexy one<br>
-            <img src="tssdrN9.png"><br>
+        <p>
+            <img src="csgo_CB0Iv7ZQ0O.png">
+            <strong>Lightning zeus flag</strong> - shows sexy zeus flag instead of not sexy one<br>
             <strong>Missmarker</strong> - like hitmarker, but for misses<br>
-            <img src="tR8LLyU.png"><br>
             <strong>Custom scope</strong> - replaces black scope lines with customizable gradient lines<br>
-            <img src="jrmM9hU.png"><br>
             <strong>State panel</strong> - shows info about desync, hit/miss ratio and current player state<br>
-            <img src="kawjg5q.png"><br>
             <strong>Indicators</strong> - shows desync lenght, invertor side and important binds under crosshair<br>
-            <img src="QJv3ncv.png"><br>
             <strong>Ryuko on menu</strong> - shows the best girl on planet earth right above your menu :3<br>
-            <img src="TkM5QIf.png"><br>
             <strong>Become MORGENSHTERN</strong> - doesn’t need explanation<br>
             <img src="YShYZW2.jpg">
         </p>
