--- a/laflare.html
+++ b/laflare.html
@@ -96,6 +96,9 @@
 
     img {
         border-style: none
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body,
@@ -232,7 +235,7 @@
             <strong>Indicators</strong> - shows desync lenght, invertor side and important binds under crosshair<br>
             <strong>Ryuko on menu</strong> - shows the best girl on planet earth right above your menu :3<br>
             <strong>Become MORGENSHTERN</strong> - doesn’t need explanation<br>
-            <img src="YShYZW2.jpg">
+            <img style="max-width: 70%" src="YShYZW2.jpg">
         </p>
     </div>
 </body>
