--- a/laflare.html
+++ b/laflare.html
@@ -95,7 +95,7 @@
     }
 
     img {
-        border-style: none
+        border-style: none;
         display: block;
         margin-left: auto;
         margin-right: auto;
