--- a/laflare.html
+++ b/laflare.html
@@ -13,7 +13,6 @@
         counter-reset: a b
     }
 
-    /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
     html {
         line-height: 1.15;
         -ms-text-size-adjust: 100%;
@@ -227,7 +226,7 @@
         </p>
         <h2 id="visuals">Visuals</h2>
         <p>
-            <img src="csgo_CB0Iv7ZQ0O.png">
+            <img src="csgo_lF5oz1jyTR.jpg">
             <strong>Lightning zeus flag</strong> - shows sexy zeus flag instead of not sexy one<br>
             <strong>Missmarker</strong> - like hitmarker, but for misses<br>
             <strong>Custom scope</strong> - replaces black scope lines with customizable gradient lines<br>
