--- a/laflare.html
+++ b/laflare.html
@@ -226,7 +226,7 @@
         </p>
         <h2 id="visuals">Visuals</h2>
         <p>
-            <img src="csgo_lF5oz1jyTR.jpg">
+            <img src="csgo_CB0Iv7ZQ0O.png">
             <strong>Lightning zeus flag</strong> - shows sexy zeus flag instead of not sexy one<br>
             <strong>Missmarker</strong> - like hitmarker, but for misses<br>
             <strong>Custom scope</strong> - replaces black scope lines with customizable gradient lines<br>
@@ -234,7 +234,7 @@
             <strong>Indicators</strong> - shows desync lenght, invertor side and important binds under crosshair<br>
             <strong>Ryuko on menu</strong> - shows the best girl on planet earth right above your menu :3<br>
             <strong>Become MORGENSHTERN</strong> - doesn’t need explanation<br>
-            <img style="max-width: 70%" src="YShYZW2.jpg">
+            <img style="max-width: 70%" src="csgo_lF5oz1jyTR.jpg">
         </p>
     </div>
 </body>
