--- a/laflare.html
+++ b/laflare.html
@@ -13,6 +13,10 @@
         counter-reset: a b
     }
 
+    em {
+        color: #999
+    }
+
     html {
         line-height: 1.15;
         -ms-text-size-adjust: 100%;
@@ -25,30 +29,8 @@
         margin: .67em 0
     }
 
-    hr {
-        box-sizing: content-box;
-        height: 0;
-        overflow: visible
-    }
-
     main {
         display: block
-    }
-
-    pre {
-        font-family: monospace, monospace;
-        font-size: 1em
-    }
-
-    a {
-        background-color: transparent;
-        -webkit-text-decoration-skip: objects
-    }
-
-    abbr[title] {
-        border-bottom: none;
-        text-decoration: underline;
-        text-decoration: underline dotted
     }
 
     b,
@@ -57,40 +39,8 @@
         color: #ddd;
     }
 
-    code,
-    kbd,
-    samp {
-        font-family: monospace, monospace;
-        font-size: 1em
-    }
-
-    dfn {
-        font-style: italic
-    }
-
-    mark {
-        background-color: #ff0;
-        color: #000
-    }
-
     small {
         font-size: 80%
-    }
-
-    sub,
-    sup {
-        font-size: 75%;
-        line-height: 0;
-        position: relative;
-        vertical-align: baseline
-    }
-
-    sub {
-        bottom: -.25em
-    }
-
-    sup {
-        top: -.5em
     }
 
     img {
@@ -102,22 +52,13 @@
 
     body,
     html {
-        color: #aaa;
+        color: #cfcfcf;
         font-size: 16px;
         font-family: Lato, Helvetica Neue, Helvetica, sans-serif;
         font-variant-ligatures: common-ligatures;
         line-height: 1.67;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale
-    }
-
-    blockquote,
-    dl,
-    ol,
-    p,
-    pre,
-    ul {
-        margin: 1.2em 0
     }
 
     h1,
@@ -137,21 +78,6 @@
         position: relative;
         top: .33em;
         border-bottom: 1px solid hsla(0, 0%, 50%, .33)
-    }
-
-    hr {
-        border: 0;
-        border-top: 1px solid hsla(0, 0%, 50%, .33);
-        margin: 2em 0
-    }
-
-    mark {
-        background-color: #f8f840
-    }
-
-    abbr[title] {
-        border-bottom: 1px dotted #777;
-        cursor: help
     }
 
     img {
