--- a/laflare.html
+++ b/laflare.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html>
-
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,8 +30,7 @@
         display: block
     }
 
-    b,
-    strong {
+    b, strong {
         font-weight: 700;
         color: #ddd;
     }
@@ -46,8 +42,7 @@
         margin-right: auto;
     }
 
-    body,
-    html {
+    body, html {
         color: #cfcfcf;
         font-size: 16px;
         font-family: Lato, Helvetica Neue, Helvetica, sans-serif;
@@ -57,18 +52,12 @@
         -moz-osx-font-smoothing: grayscale
     }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
+    h1, h2, h3, h4, h5, h6 {
         margin: 1em 0;
         line-height: 1.33
     }
 
-    h1:after,
-    h2:after {
+    h1:after, h2:after {
         content: "";
         display: block;
         position: relative;
@@ -93,57 +82,69 @@
 <body>
     <div class="markdown">
         <h2 id="rage">Rage</h2>
-        <p><strong>Conditions if lethal (only SSG-08)</strong> - helps killing lethal players.<br>
+        <p>
+            <strong>Conditions if lethal (only SSG-08)</strong> - helps killing lethal players.<br>
             Autocalculate damage <em>- uses cheat’s APIs to calculate possible damage from your weapon</em><br>
             Extrapolate local player <em>- helps correctly autocalculating damage by utilizing your velocity and
                 position</em><br>
-            Minimum health (if Autocalculate damage turned off) <em>- applies conditions if target’s health is lower than this
-                value</em><br>
+            Minimum health (if Autocalculate damage is turned off) <em>- applies conditions if the target’s health is
+                lower than this value</em><br>
             Values: <em>Body aim, Safe points, Ensure safety (on hitboxes)</em></p>
-        <p><strong>Adaptive autopeek</strong> - makes autopeek more comfortable<br>
+        <p>
+            <strong>Adaptive autopeek</strong> - makes autopeek more comfortable<br>
             Apply only with SSG-08 <em>- useful if you use mindamage for idealticking, so you will not ruin your AWP
                 experience</em><br>
-            Values: <em>Minimum damage, Hitchance, Body aim, Safe points, Ensure safety (on hitboxes), Freestanding</em></p>
-        <p><strong>Adaptive hitchance</strong><br>
+            Values: <em>Minimum damage, Hitchance, Body aim, Safe points, Ensure safety (on hitboxes), Freestanding</em>
+        </p>
+        <p>
+            <strong>Adaptive hitchance</strong><br>
             Weapons: <em>Autosnipers, AWP, SSG-08</em><br>
             Conditions: <em>In air, Unscoped, Slowwalking</em><br>
             Values: <em>Hitchance</em></p>
-        <p><strong>Fast zeus</strong> - instantly switches to your primary weapon after firing from zeus<br>
-            <strong>Jumpscout improvement</strong> - disables autostrafer when you have low speed, so you can hit jumpshots
+        <p>
+            <strong>Fast zeus</strong> - instantly switches to your primary weapon after firing from zeus<br>
+            <strong>Jumpscout improvement</strong> - disables autostrafer when you have low speed, so you can hit
+            jumpshots
         </p>
         <h2 id="antiaim">Antiaim</h2>
-        <p><strong>Activate defensive while in air</strong> - magically makes everyone miss, also named as “Break LC in
+        <p>
+            <strong>Activate defensive while in air</strong> - magically makes everyone miss, also named as “Break LC in
             air”<br>
             <strong>Manual direction</strong>: <em>Disabled, Left, Right</em> - rotates your player.
         </p>
-        <p><strong>Antiaim builder</strong> - helps you making perfect antiaims.<br>
-            Conditions: <em>Global, Air+duck, Air, Slowwalk, Duck, Running, Standing</em><br>
+        <p>
+            <strong>Antiaim builder</strong> - helps you making perfect antiaim.<br>
+            Conditions: <em>Global, Air+duck, Air, Slowwalk, Duck, Running, Standing</em></p>
+        <p>
             Yaw: <em>Disabled, Backward, Static</em><br>
             Yaw base: <em>Local view, At targets</em><br>
-            Yaw offset: <em>value from -180 to 180</em></p>
-        <p>Yaw modifier: <em>Disabled, Center, Offset, Random, Spin</em><br>
-            Yaw modifier offset: <em>value from -180 to 180</em></p>
-        <p>Body yaw:<br>
+            Yaw offset: <em>value from -180 to 180</em><br>
+            Yaw modifier: <em>Disabled, Center, Offset, Random, Spin</em><br>
+            Yaw modifier offset: <em>value from -180 to 180</em><br>
+            Body yaw:</p>
+        <p>
             Left/Right limits: <em>value from 0 to 60</em><br>
             Options: <em>Avoid overlap, Jitter, Randomize jitter, Anti bruteforce</em><br>
             Desync freestanding: <em>Off, Peek fake, Peek real</em><br>
             On shot: <em>Default, Opposite, Freestanding, Switch</em><br>
-            LBY mode: <em>Disabled, Opposite, Sway</em></p>
-        <p>Extended angles:<br>
+            LBY mode: <em>Disabled, Opposite, Sway</em><br>
+            Extended angles:<br>
             Extended pitch: <em>value from -180 to 180</em><br>
-            Extended yaw: <em>value from 0 to 90</em></p>
-        <p>Jitter legs <em>- constantly switches “Leg movement” values</em><br>
-            Export <em>- copies your antiaim builder settings to clipboard, so you can share them with friends</em><br>
-            Import <em>- pastes antiaim builder settings from clipboard</em></p>
+            Extended yaw: <em>value from 0 to 90</em><br>
+            Jitter legs <em>- constantly switches “Leg movement” values</em><br>
+            Export <em>- copies your antiaim builder settings to the clipboard, so you can share them with
+                friends</em><br>
+            Import <em>- pastes antiaim builder settings from the clipboard</em></p>
         <h2 id="miscellaneous">Miscellaneous</h2>
-        <p><strong>Aspect ratio</strong> - stretches your screen<br>
+        <p>
+            <strong>Aspect ratio</strong> - stretches your screen<br>
             <strong>Viewmodel</strong> - changes your hands’ position<br>
             <strong>Flash icon on round start</strong> - highlights csgo’s taskbar icon with orange color on the round
             start<br>
-            <strong>Laflare clantag</strong> - animates your clantag so you can flex with our lua<br>
-            <strong>Trashtalk</strong> - says something that Morgenshtern would say after kill. как дела как дела это новый
-            кадиллак<br>
-            <strong>Aimbot logs</strong> - logs your misses and hits to console and upper left corner<br>
+            <strong>Laflare clantag</strong> - animates your clantag so you can flex with our script<br>
+            <strong>Trashtalk</strong> - says something that Morgenshtern would say after the kill. как дела как дела
+            это новый кадиллак<br>
+            <strong>Aimbot logs</strong> - logs your misses and hits to the console and upper left corner<br>
             <strong>Change VGUI color</strong> - changes console and server browser color
         </p>
         <h2 id="visuals">Visuals</h2>
@@ -152,13 +153,11 @@
             <strong>Lightning zeus flag</strong> - shows sexy zeus flag instead of not sexy one<br>
             <strong>Missmarker</strong> - like hitmarker, but for misses<br>
             <strong>Custom scope</strong> - replaces black scope lines with customizable gradient lines<br>
-            <strong>State panel</strong> - shows info about desync, hit/miss ratio and current player state<br>
-            <strong>Indicators</strong> - shows desync lenght, invertor side and important binds under crosshair<br>
+            <strong>State panel</strong> - shows info about desync, hit/miss ratio, and current player state<br>
+            <strong>Indicators</strong> - shows desync length, inverter side and important binds under the crosshair<br>
             <strong>Ryuko on menu</strong> - shows the best girl on planet earth right above your menu :3<br>
-            <strong>Become MORGENSHTERN</strong> - doesn’t need explanation<br>
+            <strong>Become MORGENSHTERN</strong> - doesn’t need an explanation
             <img style="max-width: 70%" src="csgo_lF5oz1jyTR.jpg">
         </p>
     </div>
 </body>
-
-</html>
