--- a/laflare.html
+++ b/laflare.html
@@ -85,9 +85,9 @@
         <p>
             <strong>Conditions if lethal (only SSG-08)</strong> - helps killing lethal players.<br>
             Autocalculate damage <em>- uses cheat’s APIs to calculate possible damage from your weapon</em><br>
-            Extrapolate local player <em>- helps correctly autocalculating damage by utilizing your velocity and
+            Extrapolate local player <em>- helps autocalculating damage more correctly using your velocity and
                 position</em><br>
-            Minimum health (if Autocalculate damage is turned off) <em>- applies conditions if the target’s health is
+            Minimum health (if autocalculate is turned off) <em>- applies conditions if the target’s health is
                 lower than this value</em><br>
             Values: <em>Body aim, Safe points, Ensure safety (on hitboxes)</em></p>
         <p>
