--- a/laflare.html
+++ b/laflare.html
@@ -82,6 +82,7 @@
 
 <body>
     <div class="markdown">
+        <img style="max-width: 70%" src="interpol.png">
         <h2 id="rage">Rage</h2>
         <p>
             <strong>Conditions if lethal (only SSG-08)</strong> - helps killing lethal players.<br>
