--- a/laflare.html
+++ b/laflare.html
@@ -158,7 +158,7 @@
             <strong>State panel</strong> - shows info about desync, hit/miss ratio, and current player state<br>
             <strong>Indicators</strong> - shows desync length, inverter side and important binds under the crosshair<br>
             <strong>Ryuko on menu</strong> - shows the best girl on planet earth right above your menu :3<br>
-            <strong>Become MORGENSHTERN</strong> - doesn’t need an explanation
+            <strong>Become MORGENSHTERN</strong> - makes your csgo a fan of MORGENSHTERN like on screenshot below
             <img style="max-width: 70%" src="csgo_lF5oz1jyTR.jpg">
         </p>
     </div>
