--- a/laflare.html
+++ b/laflare.html
@@ -123,14 +123,15 @@
             Yaw offset: <em>value from -180 to 180</em><br>
             Yaw modifier: <em>Disabled, Center, Offset, Random, Spin</em><br>
             Yaw modifier offset: <em>value from -180 to 180</em><br>
-            Body yaw:</p>
-        <p>
+            <br>
+            Body yaw:
             Left/Right limits: <em>value from 0 to 60</em><br>
             Options: <em>Avoid overlap, Jitter, Randomize jitter, Anti bruteforce</em><br>
             Desync freestanding: <em>Off, Peek fake, Peek real</em><br>
             On shot: <em>Default, Opposite, Freestanding, Switch</em><br>
             LBY mode: <em>Disabled, Opposite, Sway</em><br>
-            Extended angles:<br>
+            <br>
+            Extended angles:
             Extended pitch: <em>value from -180 to 180</em><br>
             Extended yaw: <em>value from 0 to 90</em><br>
             Jitter legs <em>- constantly switches “Leg movement” values</em><br>
