--- a/laflare.html
+++ b/laflare.html
@@ -113,30 +113,29 @@
             <strong>Activate defensive while in air</strong> - magically makes everyone miss, also named as “Break LC in
             air”<br>
             <strong>Manual direction</strong>: <em>Disabled, Left, Right</em> - rotates your player.
-        </p>
-        <p>
+            <br>
             <strong>Antiaim builder</strong> - helps you making perfect antiaim.<br>
             Conditions: <em>Global, Air+duck, Air, Slowwalk, Duck, Running, Standing</em></p>
-        <p>
+            <br>
             Yaw: <em>Disabled, Backward, Static</em><br>
             Yaw base: <em>Local view, At targets</em><br>
             Yaw offset: <em>value from -180 to 180</em><br>
             Yaw modifier: <em>Disabled, Center, Offset, Random, Spin</em><br>
             Yaw modifier offset: <em>value from -180 to 180</em><br>
             <br>
-            Body yaw:
+            Body yaw: <br>
             Left/Right limits: <em>value from 0 to 60</em><br>
             Options: <em>Avoid overlap, Jitter, Randomize jitter, Anti bruteforce</em><br>
             Desync freestanding: <em>Off, Peek fake, Peek real</em><br>
             On shot: <em>Default, Opposite, Freestanding, Switch</em><br>
             LBY mode: <em>Disabled, Opposite, Sway</em><br>
-            <br>
+            <br> <br>
             Extended angles:
             Extended pitch: <em>value from -180 to 180</em><br>
             Extended yaw: <em>value from 0 to 90</em><br>
+            <br>
             Jitter legs <em>- constantly switches “Leg movement” values</em><br>
-            Export <em>- copies your antiaim builder settings to the clipboard, so you can share them with
-                friends</em><br>
+            Export <em>- copies your antiaim builder settings to the clipboard, so you can share them with friends</em><br>
             Import <em>- pastes antiaim builder settings from the clipboard</em></p>
         <h2 id="miscellaneous">Miscellaneous</h2>
         <p>
