--- a/laflare.html
+++ b/laflare.html
@@ -115,7 +115,7 @@
             <strong>Manual direction</strong>: <em>Disabled, Left, Right</em> - rotates your player.
             <br>
             <strong>Antiaim builder</strong> - helps you making perfect antiaim.<br>
-            Conditions: <em>Global, Air+duck, Air, Slowwalk, Duck, Running, Standing</em></p>
+            Conditions: <em>Global, Air+duck, Air, Slowwalk, Duck, Running, Standing</em>
             <br>
             Yaw: <em>Disabled, Backward, Static</em><br>
             Yaw base: <em>Local view, At targets</em><br>
@@ -129,14 +129,15 @@
             Desync freestanding: <em>Off, Peek fake, Peek real</em><br>
             On shot: <em>Default, Opposite, Freestanding, Switch</em><br>
             LBY mode: <em>Disabled, Opposite, Sway</em><br>
-            <br> <br>
-            Extended angles:
+            <br>
+            Extended angles: <br>
             Extended pitch: <em>value from -180 to 180</em><br>
             Extended yaw: <em>value from 0 to 90</em><br>
             <br>
             Jitter legs <em>- constantly switches “Leg movement” values</em><br>
             Export <em>- copies your antiaim builder settings to the clipboard, so you can share them with friends</em><br>
-            Import <em>- pastes antiaim builder settings from the clipboard</em></p>
+            Import <em>- pastes antiaim builder settings from the clipboard</em>
+        </p>
         <h2 id="miscellaneous">Miscellaneous</h2>
         <p>
             <strong>Aspect ratio</strong> - stretches your screen<br>
