--- a/laflare.html
+++ b/laflare.html
@@ -112,7 +112,7 @@
         <p>
             <strong>Activate defensive while in air</strong> - magically makes everyone miss, also named as “Break LC in
             air”<br>
-            <strong>Manual direction</strong>: <em>Disabled, Left, Right</em> - rotates your player.
+            <strong>Manual direction</strong>: <em>Disabled, Left, Right</em> - rotates your player.<br>
             <br>
             <strong>Antiaim builder</strong> - helps you making perfect antiaim.<br>
             Conditions: <em>Global, Air+duck, Air, Slowwalk, Duck, Running, Standing</em>
