--- a/laflare.html
+++ b/laflare.html
@@ -110,8 +110,8 @@
         </p>
         <h2 id="antiaim">Antiaim</h2>
         <p>
-            <strong>Activate defensive while in air</strong> - magically makes everyone miss, also named as “Break LC in
-            air”<br>
+            <strong>Activate defensive while in air</strong> (also named as “Break LC in
+            air”)<br>
             <strong>Manual direction</strong>: <em>Disabled, Left, Right</em> - rotates your player.<br>
             <br>
             <strong>Antiaim builder</strong> - helps you making perfect antiaim.<br>
